--- a/přílohy/README
+++ b/přílohy/README
@@ -1,2 +1,1 @@
-V tomto adresáři se vytváří podadresáře pro každou datovou sadu, která obsahuje přílohy.
-Přílohy se pak ukládají do příslušného podadresáře dané datové sady.
+V této složce se ukládají soubory s příponou csv. Jedná se o přílohy datových sad.
